--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <input type="file" id="game-image" accept="image/*">
         </div>
 
+        <video id="video" autoplay playsinline></video>
+
         <!-- Output Box -->
         <div class="box output-box" id="output-box">
             <p>Waiting for next move</p>
